--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello world
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Scrambles</title>
+	<meta charset="utf-8"/>
+	<link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+	<h1>Scrambles!</h1>
+</body>
+</html>
