--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
 	<title>Scrambles</title>
 	<meta charset="utf-8"/>
+	 <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
+
 <body>
-	<h1>Scrambles!</h1>
+	<header>
+		<h1>Scrambles!</h1>
+	</header>
 </body>
 </html>
