--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 	<title>Scrambles</title>
 	<meta charset="utf-8"/>
 	 <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
+	 <link rel="stylesheet" type="text/css" href="css/tabzilla.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
 	<header>
 		<h1>Scrambles!</h1>
+		<div id="tabzilla">
+    			<a href="https://www.mozilla.org/">Mozilla</a>
+		</div>
 	</header>
 </body>
 </html>
