--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
 	<title>Scrambles</title>
 	<meta charset="utf-8"/>
 	 <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
-	 <link rel="stylesheet" type="text/css" href="css/tabzilla.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="main.css">
+	 <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
 	<header>
 		<h1>Scrambles!</h1>
-		<div id="tabzilla">
-    			<a href="https://www.mozilla.org/">Mozilla</a>
-		</div>
+		<nav>
+    			<link rel="stylesheet" type="text/css" ref="main.css"</a>
+    			<ul>
+  				<li><a href="#home">Home</a></li>
+  				<li><a href="#about">About</a></li>
+  				<li><a href="#blog">Blog</a></li>
+				<li><a href="#research">Research</a></li>
+				<li><a href="#CV">CV</a></li>
+			</ul>
+		</nav>
 	</header>
 </body>
 </html>
