--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<header>
 		<h1>Scrambles!</h1>
 	</header>
+	<nav>
     		<ul>
   			<li><a href="#home">Home</a></li>
   			<li><a href="#about">About</a></li>
@@ -18,5 +19,6 @@
 			<li><a href="#research">Research</a></li>
 			<li><a href="#CV">CV</a></li>
 		</ul>
+	</nav>
 </body>
 </html>
